<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itp341.zhao.glarence.a6.MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/goalTextView"
        android:text="@string/solveTextView"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/puzzleLayout"
        android:layout_below="@id/goalTextView"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/colorPuzzle"
            android:text="@string/puzzleColor"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desirePuzzle"
            android:text="@string/desirePuzzle"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/namePuzzle"
            android:text="@string/namePuzzle"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/schoolPuzzle"
            android:text="@string/schoolPuzzle"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_below="@id/puzzleLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room1Button"
            android:id="@+id/room1Button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room2Button"
            android:id="@+id/room2Button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room3Button"
            android:id="@+id/room3Button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room4Button"
            android:id="@+id/room4Button"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/solveButton"
        android:id="@+id/solveButton"
        android:layout_below="@id/buttonLayout"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheatButton"
        android:id="@+id/cheatButton"
        android:layout_below="@id/solveButton"
        android:layout_marginTop="36dp"/>

</RelativeLayout>
