<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schoolQuestion"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/schoolButtons"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/USCButton"
            android:text="@string/USC"
            android:textSize="24sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/UCLAButton"
            android:text="@string/UCLA"
            android:textSize="24sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:text="@string/submitButton"
        android:layout_marginBottom="32dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hintButton"
        android:text="@string/hintButton"
        android:layout_gravity="center"/>

</LinearLayout>