<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RString"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/RValueDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginEnd="8dp"/>

        <SeekBar
            android:id="@+id/RSlider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="255"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GString"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/GValueDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginEnd="8dp"/>

        <SeekBar
            android:id="@+id/GSlider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="255"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BString"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/BValueDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginEnd="8dp"/>

        <SeekBar
            android:id="@+id/BSlider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="255"/>

    </LinearLayout>

    <TextView
        android:id="@+id/previewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previewTitle"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/colorDisplay"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/setChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changesButton"
        android:layout_gravity="center"/>

</LinearLayout>